--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+}
 .wrapper {
     max-width: 1920px;
     margin: 0 auto;
@@ -9,7 +10,7 @@
     border: 0px solid black;
     background-color: white;;
     border-radius: 5px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .main-head {
@@ -19,7 +20,6 @@
     color: white;
     text-align: center;
     background-image: url("marblebackground.jpg");
-    justify-content: center;
 }
 .content{
     grid-area:content;
@@ -29,7 +29,7 @@
     grid-area: nav;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     list-style-type: none;
-    background:transparent;
+    background-image: url("marblebackground.jpg");
 }
 .side {
     grid-area:sidebar;
@@ -43,37 +43,13 @@
     color: white;
 }
 
+
 h1 {
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-h2 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    font-size: 1em;
-}
-
-p{
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.form{
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    size: 200%;
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-  }
 /* nav bar styling */
 .main-nav {
-    background:transparent;
+    background-color:white;
     overflow: hidden;
   }
   
@@ -108,19 +84,18 @@ p{
     "header"
     "nav"
     "content"
+    "sidebar"
     "ad"
     "footer";
 }
-    nav ul{
-        list-style-type: none;
-    }
+
 @media (min-width:500px){
     .wrapper{
         grid-template-columns: 1fr 3fr;
         grid-template-areas: 
         "header header"
         "nav nav"
-        "content content"
+        "sidebar content"
         "footer footer";
     }
     nav ul{
@@ -144,5 +119,17 @@ p{
         display: flex;
         list-style-type: none;
     }
+	
+	.Ikoner {
+	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+  	max-width: 50%
+	}
 }
 
+.flasker {
+	max-width: 300px;
+	float:none;
+		
+}
